<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderList"
    android:orientation="vertical"
    android:background="#FFD500">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thank_you"
        android:layout_margin="30sp"
        android:textSize="40sp"
        android:textColor="#333333"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="normal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textColor="#606060"
        android:text="@string/your_order_has_been_placed_n_enjoy_your_meal_soon"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="70sp"
        android:layout_marginRight="20sp"
        app:cardCornerRadius="30sp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        android:background="#FF606060">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20sp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_order"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="#EBFFFFFF"
                android:textStyle="italic"
                />
            <TextView
                android:id="@+id/order"
                android:layout_marginTop="40sp"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/not_yet"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="image"
        android:cropToPadding="true"
        android:elevation="10sp"
        android:src="@drawable/dishes" />
</LinearLayout>